Empiezo a maquetar el index.html

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kicks>Home</title>
+    <title>Kicks</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
@@ -11,9 +11,41 @@
     <link rel="stylesheet" href="/css/styles.css">   
 </head>
 <body>
-    <div>
-        <img src="/images/kicks.png" alt="logo kicks">
-    </div>
+    
+    <header class="main-header">
+        <div class="main-header-top-bar">
+            <img src="/images/kicks.png" class="logo">
+            <div class="search">Lugar para poner la barra de busqueda</div>
+            <h2 class="copy-header">
+                <i class="fas fa-user-circle"></i>
+            </h2>
+            <h2 class="copy-header">
+                <i class="fas fa-shopping-cart"></i>
+            </h2>
+            <h2 class="copy-header">
+                <i class="fas fa-share-alt-square"></i>
+            </h2>
+        </div>
+
+        <nav class="main-navbar">
+            <ul class="navbar">
+                <li><a href="#">HOMBRE</a></li>
+                <li><a href="#">MUJER</a></li>
+                <li><a href="#">NIÑOS</a></li>
+                <li><a href="#">MARCAS</a></li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
