Cambios en la estructura de los archivos index, login y register

--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,44 +9,154 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <script src="https://kit.fontawesome.com/e8df24fbbe.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles.css">   
+    <link rel="stylesheet" href="/css/styles-rama.css">
 </head>
+
 <body>
-    
+
     <header class="main-header">
-        <div class="main-header-top-bar">
-            <img src="/images/kicks.png" class="logo">
-            <div class="search">Lugar para poner la barra de busqueda</div>
-            <h2 class="copy-header">
-                <i class="fas fa-user-circle"></i>
-            </h2>
-            <h2 class="copy-header">
-                <i class="fas fa-shopping-cart"></i>
-            </h2>
-            <h2 class="copy-header">
-                <i class="fas fa-share-alt-square"></i>
-            </h2>
+        <div class="header-top-bar">
+            <div class="contenedor-menu">
+                <i class="fas fa-bars menu-desplegable"></i>
+            </div>
+            <a href="/" class="home"><img src="/images/kicks.png" alt="logo kicks" class="logo"></a>
+            <div class="icons-section">
+                <a href="/login"><i class="fas fa-user"></i></a>
+                <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+                <a href="/"><i class="fas fa-share-alt-square"></i></a>
+            </div>
+            <form action="/productDetail" method="GET" class="search-form">
+                <input type="text" name="search" placeholder="¿Qué estás buscando?" class="campo-busqueda">
+                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
+            </form>
         </div>
 
-        <nav class="main-navbar">
-            <ul class="navbar">
-                <li><a href="#">HOMBRE</a></li>
-                <li><a href="#">MUJER</a></li>
-                <li><a href="#">NIÑOS</a></li>
-                <li><a href="#">MARCAS</a></li>
+        <nav class="header-bottom-bar">
+            <ul>
+                <li><a href="#" class="linknav">HOMBRE</a></li>
+                <li><a href="#" class="linknav">MUJER</a></li>
+                <li><a href="#" class="linknav">NIÑO</a></li>
+                <li><a href="#" class="linknav">DEPORTES</a></li>
+                <li><a href="#" class="linknav">MARCAS</a></li>
             </ul>
 
         </nav>
 
+        <br>
+
     </header>
 
+    <section class="banner">
+        <img src="/images/banner-nike-airforce.jpg" alt="Banner de ofertas">
+    </section>
+
+
     <main>
+        <section class="marcas">
+            <div class="title">
+                <h2 class="linea"><span>MARCAS</span></h2>
+            </div>
+            <div class="images">
+                <img src="images/marca-nike.png" alt="Nike" class="marca_img">
+                <img src="images/marca-adidas.png" alt="Adidas" class="marca_img">
+                <img src="images/marca-puma.png" alt="Puma" class="marca_img">
+                <img src="images/marca-converse.png" alt="Converse" class="marca_img">
+                <img src="images/marca-vans.png" alt="Vans" class="marca_img">
+                <img src="images/marca-newbalance.png" alt="Newbalance" class="marca_img">
+            </div>
+            <div class="icons-marca">
+                <i class="fas fa-chevron-left previous"></i>
+                <i class="fas fa-chevron-right next"></i>
+            </div>
+
+        </section>
+
+        <section class="zapatillas">
+            <div class="title">
+                <h2 class="linea"><span>DESTACADOS</span></h2>
+            </div>
+            <div class="products">
+                <article>
+                    <img src="images/adidas1.png" alt="Adidas1" class="product_img">
+                    <div class="main-article">
+                        <h4 class="description">Adidas Ozweego Orange (Youth)</h4>
+                        <p class="price">$11.700</p>
+                    </div>
+                </article>
+                <article class="none">
+                    <img src="images/nike1.png" alt="Nike1" class="product_img">
+                    <div class="main-article">
+                        <h4 class="description">Nike Air Max 95 OG Neon (2020)</h4>
+                        <p class="price">$25.499</p>
+                    </div>
+                </article>
+                <article class="none1">
+                    <img src="images/puma1.png" alt="Puma1" class="product_img">
+                    <div class="main-article">
+                        <h4 class="description">Puma RS-X Toys Bonnie Blue (W)</h4>
+                        <p class="price">$12.499</p>
+                    </div>
+                </article>
+                <article class="none1">
+                    <img src="images/new-balance1.png" alt="Newbalance1" class="product_img">
+                    <div class="main-article">
+                        <h4 class="description">Puma RS-X Toys Bonnie Blue (W)</h4>
+                        <p class="price">$12.499</p>
+                    </div>
+                </article>
+
+
+
+                <div class="envios">
+                    <i class="fas fa-shipping-fast"></i>¡ENVIOS SIN CARGO A TODO EL PAIS!
+                </div>
 
     </main>
 
     <footer>
 
-    </footer>
+        <section>
+            <br />
+            <h4 class="titulo">INSTITUCIONAL</h4>
+            <div class="italic center gris-oscuro padding">
+                <ul class="footer">
+                    <li><a href="#" class="linkfooter">Quienes somos</a></li>
+                    <li><a href="#" class="linkfooter">Politicas de privacidad</a></li>
+                    <li><a href="#" class="linkfooter">Terminos y condiciones</a></li>
+                </ul>
+            </div>
+
+            <br />
     
+            <h4 class="titulo">AYUDA</h4>
+            <div class="italic center gris-oscuro padding">
+                <ul class="footer">
+                    <li><a href="#" class="linkfooter">Preguntas frecuentes</a></li>
+                    <li><a href="#" class="linkfooter">Sucursales</a></li>
+                    <li><a href="#" class="linkfooter">Pagos</a></li>
+                    <li><a href="#" class="linkfooter">Entregas</a></li>
+                    <li><a href="#" class="linkfooter">Cambios</a></li>
+                </ul>
+            </div>
+
+            <br />
+
+            <h4 class="titulo">CONTACTO</h4>
+            <div class="italic  ">
+                <ul class="footer">
+                    <li><a href="#" class="linkfooter">0800-888-8888</a></li>
+                    <li><a href="#" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a></li>
+                    <li><a href="#" class="linkfooter"><i class="far fa-envelope"></i>Envianos un mensaje</a></li>
+                </ul>
+            </div>
+
+            <br />
+
+            <p class="gris-oscuro font-size">Copyright © 2020 KICKS S.R.L.</p>
+        </section>
+
+    </footer>
+
 </body>
+
 </html>
